[gd_scene load_steps=7 format=2]

[ext_resource path="res://Main/TetrisComponent.gd" type="Script" id=1]
[ext_resource path="res://Platforms/PlatformTile.tscn" type="PackedScene" id=2]
[ext_resource path="res://Board/Board.tscn" type="PackedScene" id=3]
[ext_resource path="res://Board/Landscape.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/BottomDisplay/BottomDisplay.tscn" type="PackedScene" id=5]
[ext_resource path="res://Platforms/Background.tscn" type="PackedScene" id=6]

[node name="Tetris" type="Node2D"]
script = ExtResource( 1 )

[node name="Board" parent="." instance=ExtResource( 3 )]
z_index = -2
offset = Vector2( -64, -64 )

[node name="Background" parent="." instance=ExtResource( 6 )]

[node name="Landscape" parent="." instance=ExtResource( 4 )]
z_index = 1

[node name="TickdownTimer" type="Timer" parent="."]
autostart = true

[node name="InputTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="LevelIncreaseTimer" type="Timer" parent="."]
wait_time = 25.0
autostart = true

[node name="BottomDisplay" parent="." instance=ExtResource( 5 )]
margin_left = -23.0
margin_top = 677.0
margin_right = 419.0
margin_bottom = 775.0

[node name="TileMap" parent="." instance=ExtResource( 2 )]
tile_data = PoolIntArray( 65535, 2, 0, 10, 2, 0, 131071, 2, 65536, 65546, 2, 65536, 196607, 2, 65536, 131082, 2, 65536, 262143, 2, 65536, 196618, 2, 65536, 327679, 2, 65536, 262154, 2, 65536, 393215, 2, 65536, 327690, 2, 65536, 458751, 2, 65536, 393226, 2, 65536, 524287, 2, 65536, 458762, 2, 65536, 589823, 2, 65536, 524298, 2, 65536, 655359, 2, 65536, 589834, 2, 65536, 720895, 2, 65536, 655370, 2, 65536, 786431, 2, 65536, 720906, 2, 65536, 851967, 2, 65536, 786442, 2, 65536, 917503, 2, 65536, 851978, 2, 65536, 983039, 2, 65536, 917514, 2, 65536, 1048575, 2, 65536, 983050, 2, 65536, 1114111, 2, 65536, 1048586, 2, 65536, 1179647, 2, 65536, 1114122, 2, 65536, 1245183, 2, 65536, 1179658, 2, 65536, 1310719, 2, 65536, 1245194, 2, 65536, 1376255, 2, 131073, 1310720, 2, 196610, 1310721, 2, 196610, 1310722, 2, 196610, 1310723, 2, 196610, 1310724, 2, 196610, 1310725, 2, 196610, 1310726, 2, 196610, 1310727, 2, 196610, 1310728, 2, 196610, 1310729, 2, 196610, 1310730, 2, 131075 )
